<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background" >

<LinearLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
<TextView 
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  style="@style/MediumText"
  android:text="@string/name"
  />
  
<EditText
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:id="@+id/bowlerName"
  />

<TextView 
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  style="@style/MediumText"
  android:text="@string/average"
  />
  
<EditText
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:id="@+id/average"
  android:inputType="number"
  />
  
<Button
	android:id="@+id/acceptButton"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    style="@style/Buttons" 
    android:text="@string/accept"
    />
    
<Button
	android:id="@+id/cancelButton"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    style="@style/Buttons"
    android:text="@string/cancel"
    />
    
<Button
	android:id="@+id/listButton"
	android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    style="@style/Buttons"
    android:text="List Bowlers"
    />
  
</LinearLayout>
</ScrollView>