<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/background">

<LinearLayout 
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:orientation="vertical">
    
<TextView
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/selectbowler"
    style="@style/MediumText"
    />
<Spinner
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bowlerSpinner"
    android:textColor="#ffffff"
    android:background="@drawable/frame_button"
	/>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
<CheckBox 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/leagueCheckBox"
    />
<TextView
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/selectleague"
    style="@style/MediumText"
    />
</LinearLayout>
<Spinner
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/leagueSpinner"
    android:textColor="#ffffff"
    android:background="@drawable/frame_button"
	/>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/singleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="#0063F7"
                android:text="@string/singledate" />

            <RadioButton
                android:id="@+id/dateRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0063F7"
                android:text="@string/daterange" />

            <RadioButton
                android:id="@+id/allDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0063F7"
                android:text="@string/alldates" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/dateButton1"
            style="@style/Buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/dateButton2"
            style="@style/Buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>

<Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statsButton"
        android:text="Show Stats"
        style="@style/Buttons"/>

<Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ballStatsButton"
        android:text="Show Ball Stats"
        style="@style/Buttons"/>
   
</LinearLayout>
</ScrollView>